# a3m-router

./: .a3m-vault.json  .dockerignore  .env  .env.example  .gitignore  .npmignore  .publish-tick  AGENT_COUNCIL_FINDINGS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.proxy  HEALTH_REPORT.md  IMPROVEMENT_PLAN.md  LANDING.md  LAUNCH-PAIN-DRIVEN.md  LAUNCH.md  LAUNCH_CHECKLIST.md  LAUNCH_SNAPSHOT.md  MANIFESTO.md  POPULARITY_BOOSTERS.md  PR_STATUS_REPORT.md  README.md  README_ja.md  README_zh.md  REDESIGN.md  RUNKIT.md  SECURITY.md  SUBMISSIONS.md  _schema.html  ai-plugin.json  benchmark-provider-results.json  benchmark-results.json  demo-new.tape  demo-real.sh  demo-simple.tape  (+15 more)
.github/: DISCUSSIONS_WELCOME.md  DISCUSSION_TEMPLATE.yml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.well-known/: ai-plugin.json
articles/: AI_AGENT_LLM_ROUTING.md  BENCHMARK_MAINTAINER_OUTREACH.md  CHINESE_DIRECTORIES.md  CHINESE_SUBMISSIONS_READY.md  COMPETITOR_ALERTS.md  COMPLETE_POSTING_DIRECTORY.md  CONTENT_STRUCTURE.md  DEVTO_COST_GUIDE.md  DEVTO_FINAL.md  DEVTO_MULTI_PROVIDER.md  DEVTO_READY.md  DEVTO_V2_ANNOUNCEMENT.md  DEVTO_VIRAL_GROWTH.md  FRESH_devto.md  FRESH_devto_2026_05.md  FRESH_hackernews.md  FRESH_reddit_ml.md  FRESH_reddit_node.md  FRESH_reddit_sideproject.md  FRESH_reddit_webdev.md  FROM_ZERO_TO_10K.md  HN_10X_BETTER.md  HN_ACCOUNT_GUIDE.md  HN_CHINESE_STYLE.md  (+56 more)
cli/: a3m
python/: README.md  integrations.py  pyproject.toml  tmlpd.py
python/a3m/: __init__.py  client.py  models.py  sync_client.py
(+302 files in other folders)
