[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "a3m-router"
version = "2.1.0"
description = "Python SDK for A3M Router — intelligent LLM routing with 99.5% accuracy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]
keywords = ["llm", "routing", "openai", "proxy", "ai-gateway", "routellm", "litellm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Das-rebel/a3m-router"
